[gd_scene load_steps=6 format=3 uid="uid://bjbbof3geoh13"]

[ext_resource type="Script" uid="uid://twuuxj8yqxg0" path="res://scenes/screens/main_menu/main_menu.gd" id="1_25jul"]
[ext_resource type="PackedScene" uid="uid://fcdunss37aoe" path="res://scenes/backgrounds/space_background/space_background.tscn" id="1_wf0jh"]
[ext_resource type="PackedScene" uid="uid://cucwoer7v435v" path="res://scenes/objects/ship/ship.tscn" id="2_xf7w6"]
[ext_resource type="Theme" uid="uid://bdpci5f57k7wy" path="res://resources/themes/primary_button.tres" id="4_enpo5"]

[sub_resource type="Environment" id="Environment_wf0jh"]
background_mode = 3
glow_enabled = true
glow_bloom = 0.5

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_25jul")
metadata/_edit_lock_ = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_wf0jh")

[node name="SpaceBackground" parent="." instance=ExtResource("1_wf0jh")]

[node name="InfoContainer" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="InfoContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/separation = 2

[node name="WelcomeLabel" type="Label" parent="InfoContainer/VBoxContainer"]
layout_mode = 2
text = "Welcome, zekeosborn!"

[node name="HighScoreLabel" type="Label" parent="InfoContainer/VBoxContainer"]
layout_mode = 2
text = "High Score: 0"

[node name="MenuContainer" type="CenterContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="MenuContainer"]
custom_minimum_size = Vector2(85, 0)
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 7

[node name="PlayButton" type="Button" parent="MenuContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("4_enpo5")
text = "Play"

[node name="LeaderboardButton" type="Button" parent="MenuContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("4_enpo5")
text = "Leaderboard"

[node name="AboutButton" type="Button" parent="MenuContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("4_enpo5")
text = "About"

[node name="LogOutButton" type="Button" parent="MenuContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("4_enpo5")
text = "Log Out"

[node name="LogInContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="LogInContainer"]
custom_minimum_size = Vector2(85, 0)
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 7

[node name="LogInButton" type="Button" parent="LogInContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("4_enpo5")
text = "Log In with Games id"

[node name="Ship" parent="." instance=ExtResource("2_xf7w6")]
position = Vector2(80, 216)
disable_control = true
